lib/flutter_audio_streamer_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/flutter_audio_streamer.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class FlutterAudioStreamerBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  FlutterAudioStreamerBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  FlutterAudioStreamerBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// lifecycle
  int fas_init() {
    return _fas_init();
  }

  late final _fas_initPtr = _lookup<ffi.NativeFunction<ffi.Int Function()>>(
    'fas_init',
  );
  late final _fas_init = _fas_initPtr.asFunction<int Function()>();

  int fas_start() {
    return _fas_start();
  }

  late final _fas_startPtr = _lookup<ffi.NativeFunction<ffi.Int Function()>>(
    'fas_start',
  );
  late final _fas_start = _fas_startPtr.asFunction<int Function()>();

  int fas_stop() {
    return _fas_stop();
  }

  late final _fas_stopPtr = _lookup<ffi.NativeFunction<ffi.Int Function()>>(
    'fas_stop',
  );
  late final _fas_stop = _fas_stopPtr.asFunction<int Function()>();

  int fas_dispose() {
    return _fas_dispose();
  }

  late final _fas_disposePtr = _lookup<ffi.NativeFunction<ffi.Int Function()>>(
    'fas_dispose',
  );
  late final _fas_dispose = _fas_disposePtr.asFunction<int Function()>();

  /// configuration
  int fas_set_stream_info(
    ffi.Pointer<ffi.Char> host,
    int port,
    ffi.Pointer<ffi.Char> mount,
    ffi.Pointer<ffi.Char> password,
  ) {
    return _fas_set_stream_info(host, port, mount, password);
  }

  late final _fas_set_stream_infoPtr = _lookup<
    ffi.NativeFunction<
      ffi.Int Function(
        ffi.Pointer<ffi.Char>,
        ffi.Int,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('fas_set_stream_info');
  late final _fas_set_stream_info =
      _fas_set_stream_infoPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Char>,
              int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
            )
          >();

  /// audio input
  int fas_push_pcm(
    ffi.Pointer<ffi.Short> left,
    ffi.Pointer<ffi.Short> right,
    int samples,
  ) {
    return _fas_push_pcm(left, right, samples);
  }

  late final _fas_push_pcmPtr = _lookup<
    ffi.NativeFunction<
      ffi.Int Function(ffi.Pointer<ffi.Short>, ffi.Pointer<ffi.Short>, ffi.Int)
    >
  >('fas_push_pcm');
  late final _fas_push_pcm =
      _fas_push_pcmPtr
          .asFunction<
            int Function(ffi.Pointer<ffi.Short>, ffi.Pointer<ffi.Short>, int)
          >();
}
